--- a/Hombres.html
+++ b/Hombres.html
@@ -14,18 +14,68 @@
     <header>
         <h1>Ropa Hombre</h1>
         <div class="container-icon">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-cart">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-              </svg>    
+            </svg>    
         </div>
         <div class="container-items">
             <div class="item">
                 <figure>
-                    <img src="https://i.ebayimg.com/thumbs/images/g/qAkAAOSwVRxlwNQv/s-l640.jpg" alt="ropa1">
+                    <img src="https://i.ebayimg.com/thumbs/images/g/qAkAAOSwVRxlwNQv/s-l640.jpg" alt="ropa">
                 </figure>
                 <div class="infoproduct">
-                    <h2>Chandal</h2>
-                    <p class="precio">s/200</p>
+                    <h2>Conjunto Chandal</h2>
+                    <p class="precio">s/240</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/rtkeu5gk3juxwfpvncdj/dri-fit-camiseta-deportiva-rMXj0g.png" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Camiseta Deportiva</h2>
+                    <p class="precio">s/120</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/b58d49b0-c988-44f0-a80c-62eae18dee9e/academy-pantalon-de-futbol-dri-fit-p4vsqF.png" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Pantalon de Futbol</h2>
+                    <p class="precio">s/160</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwc9bb7d05/images/hi-res/196968052783_1_20231201120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Camiseta Alianza lima</h2>
+                    <p class="precio">s/250</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://micasperu.shop/cdn/shop/files/ScreenShot2023-06-21at19.54.24.png?v=1687395273" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Camiseta FC Barcelona</h2>
+                    <p class="precio">s/290</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw957d3a41/images/hi-res/197594143531_1_20240403-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Polo de running Dri-FIT</h2>
+                    <p class="precio">s/169</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
