avance pagina hombre

--- a/Hombres.html
+++ b/Hombres.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tienda de nike </title>
-    <link rel="stylesheet" href="stiyles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
@@ -16,8 +16,29 @@
         <div class="container-icon">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-cart">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-            </svg>    
+            </svg> 
+            <div class="count-products">
+                <span id="contador-productos">0</span>
+            </div>
+            <div class="container-cart-products hidden-cart">
+                <div class="cart-product">
+                    <div class="info-cart-product">
+                        <span class="cantidad-producto-carrito">1</span>
+                        <p class="titulo-producto-carrito">Conjunto Chandal</p>
+                        <span class="precio-producto-carrito">s/240</span>
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-close">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+                      </svg>
+                </div>
+                <div class="cart-total">
+                    <h3>Total:
+                        <span class="total-pagar">s/240</span>
+                    </h3>
+                </div>
+            </div>  
         </div>
+    </header>
         <div class="container-items">
             <div class="item">
                 <figure>
@@ -64,7 +85,7 @@
                     <img src="https://micasperu.shop/cdn/shop/files/ScreenShot2023-06-21at19.54.24.png?v=1687395273" alt="ropa">
                 </figure>
                 <div class="infoproduct">
-                    <h2>Camiseta FC Barcelona</h2>
+                    <h2> Camiseta FC Barcelona</h2>
                     <p class="precio">s/290</p>
                     <button>Añadir al carrito</button>
                 </div>
@@ -80,6 +101,5 @@
                 </div>
             </div>
         </div>
-    </header>
 </body>
 </html>
