--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             en el mundo 
         
         </p>  
-        <button><a href="iniciarseccion.html">iniciar secion</a><img src="icons/bxs-right-arrow-alt.svg" alt=""></button>
+        <button><a href="iniciarsecion.html">iniciar secion</a><img src="icons/bxs-right-arrow-alt.svg" alt=""></button>
         </header>
         <img class="emp" src="imagenes/jio.png" alt="">
         <img clas="fondo-emp" src="imagenes/images.png"  alt="">
