--- a/iniciarsecion.html
+++ b/iniciarsecion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,14 +13,12 @@
         <img  class="avatar" src="imagenes/nIke-logo.jpg" alt="logo de nike">
         <h1> login here</h1>
         <form>
-            <label for="usarname">Usarname</label>
+            <label for="usarname">Usuario</label>
             <input type="text" placeholder="Enter Usarname">
-            <label for="password">password</label>
-            <input type="password" placeholder="Enter Usarname">
+            <label for="password">Contraseña</label>
+            <input type="password" placeholder="Enter password">
             <input type="submit" value="log in">
-            <a herf="#">lost your password?</a>
-            <a herf="#">dont t have an aa</a>
-        </form>
+           
     </div>
 
             
