--- a/Hombres.html
+++ b/Hombres.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tienda de nike </title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
@@ -14,21 +14,21 @@
     <nav>
         <p class="logo">NIKE</p>
         <ul>       
-            <li><a href="Descuentos.html">Descuentos</a><li>
+            <li><a href="Calzados.html">Calzado</a><li>
             <li><a href="Niños.html">Niños</a><li>
             <li><a href="mujeres.html">Mujeres</a><li>
             <li><a href="Hombres.html">Hombres</a><li>  
         </ul>
     </nav>
+    
     <header>  
-        <h1>Ropa Hombre</h1>
-        </div> 
+        <h1>Ropa de Hombre</h1>
         <div class="container-icon">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-cart">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
             </svg> 
             <div class="count-products">
-                <span id="contador-productos">0</span>
+                <span id="contador-productos">1</span>
             </div>
             <div class="container-cart-products hidden-cart">
                 <div class="cart-product">
@@ -48,7 +48,7 @@
                 </div>
             </div>  
         </div>
-    </header>
+    </header>   
         <div class="container-items">
             <div class="item">
                 <figure>
@@ -107,6 +107,36 @@
                 <div class="infoproduct">
                     <h2>Polo de running Dri-FIT</h2>
                     <p class="precio">s/169</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwbaf41911/images/hi-res/196608718314_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Pantalon de Dri-FIT</h2>
+                    <p class="precio">s/135</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwa2867db9/images/hi-res/196155007824_1_20240208120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Polo de Manga Larga</h2>
+                    <p class="precio">s/139</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw162c8300/images/hi-res/191888621941_1_20240305-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Polo Hombre</h2>
+                    <p class="precio">s/99</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
