--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <p class="logo">NIKE</p>
             <ul>       
-                <li><a href="Descuentos.html">Descuentos</a><li>
+                <li><a href="Calzado.html">Calzado</a><li>
                 <li><a href="Niños.html">Niños</a><li>
                 <li><a href="mujeres.html">Mujeres</a><li>
                 <li><a href="Hombres.html">Hombres</a><li>  
