--- a/Hombres.html
+++ b/Hombres.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav>
-        <p class="logo">NIKE</p>
+        <p class="logo"></p>
         <ul>       
             <li><a href="Calzados.html">Calzado</a><li>
             <li><a href="Niños.html">Niños</a><li>
@@ -110,6 +110,82 @@
                     <button>Añadir al carrito</button>
                 </div>
             </div>
+            <div class="item">
+                <figure>
+                    <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/4e19b775-aa46-486d-a85c-a232bdcc4944/playera-vers%C3%A1til-de-manga-corta-primary-XK77j1.png" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Playera versatil de manga corta</h2>
+                    <p class="precio">s/145</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/ce2d1045-42dc-4612-a85b-153668c24f07/shorts-vers%C3%A1tiles-sin-forro-dri-fit-de-13-900-unlimited-nlD0tf.png" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Shorts versatiles Dri-FIT</h2>
+                    <p class="precio">s/110</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwf3aec0ff/images/hi-res/193654352769_1_20240125120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Conjunto de entrenamiento para hombre
+                    </h2>
+                    <p class="precio">s/249</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwa9e81a26/images/hi-res/194494730755_1_20240129120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>T-Shirts Manga Corta Urbano Hombre
+                    </h2>
+                    <p class="precio">s/79.90</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwab81f361/images/hi-res/196975281152_1_20240327-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>T-Shirts Manga Corta Running Hombre
+                    </h2>
+                    <p class="precio">s/169</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwa6ee6318/images/hi-res/196607392461_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Buzos Urbano Hombre
+                    </h2>
+                    <p class="precio">s/230.75</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwd6e56bd7/images/hi-res/196607415139_1_20230922120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Joggers de ajuste slim para hombre
+                    </h2>
+                    <p class="precio">s/239.94</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            
             <div class="item">
                 <figure>
                     <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwbaf41911/images/hi-res/196608718314_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
