--- a/Calzados.html
+++ b/Calzados.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tienda de nike </title>
-    <link rel="stylesheet" href="styles1.css">
+    <link rel="stylesheet" href="stylescalzados.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
@@ -28,14 +28,15 @@
                 <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
             </svg> 
             <div class="count-products">
-                <span id="contador-productos">2</span>
+                <span id="contador-productos">1</span>
             </div>
             <div class="container-cart-products hidden-cart">
                 <div class="cart-product">
                     <div class="info-cart-product">
                         <span class="cantidad-producto-carrito">1</span>
-                        <p class="titulo-producto-carrito">Conjunto Chandal</p>
-                        <span class="precio-producto-carrito">s/240</span>
+                        <p class="titulo-producto-carrito">Nike Zoom Mercurial Superfly 9 Academy MG</p>
+                        <span class="precio-producto-carrito">s/419.90
+                        </span>
                     </div>
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-close">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
@@ -43,7 +44,7 @@
                 </div>
                 <div class="cart-total">
                     <h3>Total:
-                        <span class="total-pagar">s/240</span>
+                        <span class="total-pagar">s/419.90</span>
                     </h3>
                 </div>
             </div>  
@@ -52,136 +53,139 @@
         <div class="container-items">
             <div class="item">
                 <figure>
-                    <img src="https://i.ebayimg.com/thumbs/images/g/qAkAAOSwVRxlwNQv/s-l640.jpg" alt="ropa">
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw18614ca8/images/hi-res/197593794611_1_20240522120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 </figure>
                 <div class="infoproduct">
-                    <h2>Conjunto Chandal</h2>
-                    <p class="precio">s/240</p>
+                    <h2>Nike Zoom Mercurial Superfly 9 Academy MG</h2>
+                    <p class="precio">s/419.90</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
                 <figure>
-                    <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/rtkeu5gk3juxwfpvncdj/dri-fit-camiseta-deportiva-rMXj0g.png" alt="ropa">
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwf20b0160/images/hi-res/196608039075_1_20240207120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
                 </figure>
                 <div class="infoproduct">
-                    <h2>Camiseta Deportiva</h2>
-                    <p class="precio">s/120</p>
+                    <h2>Nike Zoom Mercurial Superfly 9 Academy TF</h2>
+                    <p class="precio">s/343.92</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
                 <figure>
-                    <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/b58d49b0-c988-44f0-a80c-62eae18dee9e/academy-pantalon-de-futbol-dri-fit-p4vsqF.png" alt="ropa">
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwb9542987/images/hi-res/196969302849_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 </figure>
                 <div class="infoproduct">
-                    <h2>Pantalon de Futbol</h2>
-                    <p class="precio">s/160</p>
-                    <button>Añadir al carrito</button>
-                </div>
-            </div>
-            <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwc9bb7d05/images/hi-res/196968052783_1_20231201120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
-                </figure>
-                <div class="infoproduct">
-                    <h2>Camiseta Alianza lima</h2>
-                    <p class="precio">s/250</p>
-                    <button>Añadir al carrito</button>
-                </div>
-            </div>
-            <div class="item">
-                <figure>
-                    <img src="https://micasperu.shop/cdn/shop/files/ScreenShot2023-06-21at19.54.24.png?v=1687395273" alt="ropa">
-                </figure>
-                <div class="infoproduct">
-                    <h2> Camiseta FC Barcelona</h2>
-                    <p class="precio">s/290</p>
-                    <button>Añadir al carrito</button>
-                </div>
-            </div>
-            <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw957d3a41/images/hi-res/197594143531_1_20240403-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
-                </figure>
-                <div class="infoproduct">
-                    <h2>Polo de running Dri-FIT</h2>
-                    <p class="precio">s/169</p>
-                    <button>Añadir al carrito</button>
-                </div>
-            </div>
-            <div class="item">
-                <figure>
-                    <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/4e19b775-aa46-486d-a85c-a232bdcc4944/playera-vers%C3%A1til-de-manga-corta-primary-XK77j1.png" alt="ropa">
-                </figure>
-                <div class="infoproduct">
-                    <h2>Playera versatil de manga corta</h2>
-                    <p class="precio">s/145</p>
-                    <button>Añadir al carrito</button>
-                </div>
-            </div>
-            <div class="item">
-                <figure>
-                    <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/ce2d1045-42dc-4612-a85b-153668c24f07/shorts-vers%C3%A1tiles-sin-forro-dri-fit-de-13-900-unlimited-nlD0tf.png" alt="ropa">
-                </figure>
-                <div class="infoproduct">
-                    <h2>Shorts versatiles Dri-FIT</h2>
-                    <p class="precio">s/110</p>
-                    <button>Añadir al carrito</button>
-                </div>
-            </div>
-            <div class="item">
-                <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwf3aec0ff/images/hi-res/193654352769_1_20240125120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
-                </figure>
-                <div class="infoproduct">
-                    <h2>Conjunto de entrenamiento para hombre
+                    <h2>Air Jordan XXXVIII
                     </h2>
-                    <p class="precio">s/249</p>
+                    <p class="precio">s/539.94</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
                 <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwa9e81a26/images/hi-res/194494730755_1_20240129120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwd9fd0e1c/images/hi-res/197593746658_1_20240522120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
                 </figure>
                 <div class="infoproduct">
-                    <h2>T-Shirts Manga Corta Urbano Hombre
+                    <h2>Nike Phantom GX 2 Elite
                     </h2>
-                    <p class="precio">s/79.90</p>
+                    <p class="precio">s/1,099.90</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
                 <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwab81f361/images/hi-res/196975281152_1_20240327-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw17ffd541/images/hi-res/196608057987_1_20240222120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
                 </figure>
                 <div class="infoproduct">
-                    <h2>T-Shirts Manga Corta Running Hombre
-                    </h2>
-                    <p class="precio">s/169</p>
+                    <h2> Nike Tiempo Legend 10 Academy</h2>
+                    <p class="precio">s/330</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
                 <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwa6ee6318/images/hi-res/196607392461_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw8f30abf1/images/hi-res/196975391769_1_20240201120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 </figure>
                 <div class="infoproduct">
-                    <h2>Buzos Urbano Hombre
-                    </h2>
-                    <p class="precio">s/230.75</p>
+                    <h2>Nike Phantom GX 2 Academy</h2>
+                    <p class="precio">s/379.90</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
             <div class="item">
                 <figure>
-                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwd6e56bd7/images/hi-res/196607415139_1_20230922120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwee73e403/images/hi-res/196604441513_2_20240201120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
                 </figure>
                 <div class="infoproduct">
-                    <h2>Joggers de ajuste slim para hombre
+                    <h2>Nike Winflo 10
                     </h2>
-                    <p class="precio">s/239.94</p>
+                    <p class="precio">s/281.94</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw2c8bef99/images/hi-res/196969025403_1_20240207120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Nike Tiempo Legend 10 Academy
+                    </h2>
+                    <p class="precio">s/258.93</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwa5779b5c/images/hi-res/197593996800_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>LeBron XXI Conchiolin
+                    </h2>
+                    <p class="precio">s/809.91</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwbe7fc2fa/images/hi-res/196968212323_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Nike Free RN NN
+                    </h2>
+                    <p class="precio">s/269.94</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw12e85e42/images/hi-res/196969177010_1_20240131120000-mrtPeru.jpg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Nike Flex Experience Run 11
+                    </h2>
+                    <p class="precio">s/179.94</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dw10536fee/images/hi-res/195869167671_1_20240131120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Nike Downshifter 12
+                    </h2>
+                    <p class="precio">s/159.92</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+            <div class="item">
+                <figure>
+                    <img src="https://www.nike.com.pe/dw/image/v2/BJKZ_PRD/on/demandware.static/-/Sites-catalog-equinox/default/dwf0ad8d16/images/hi-res/196969191887_1_20240129120000-mrtPeru.jpeg?sw=800&sh=800" alt="ropa">
+                </figure>
+                <div class="infoproduct">
+                    <h2>Nike Vomero 17</h2>
+                    <p class="precio">s/489.93</p>
                     <button>Añadir al carrito</button>
                 </div>
             </div>
