--- a/mujeres.html
+++ b/mujeres.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
@@ -14,9 +14,9 @@
     
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">Zapatillas</a></li>
-                    <li><a href="#">Ropa</a></li>
-                    <li><a href="#">Nuevo Lanzamineto</a></li>
+                    <li><a href="Calzados.html">Calzados</a></li>
+                    <li><a href="Hombres.html">Hombres</a></li>
+                    <li><a href="mujeres.html">Mujeres</a></li>
                     <li><a href="#">Ofertas</a></li>
                     <li><a href="#">Adolecentes</a></li>
                 </ul>
