--- a/mujeres.html
+++ b/mujeres.html
@@ -33,7 +33,7 @@
     <div class="containerr-items">
         <div class="items">
             <figure>
-                <img src="images/imagen1.jpg" alt="producto">
+                <img src="imagenes/imagen1.jpg" alt="producto">
             </figure>
             <div class="info-product">
                 <h2>V2K Run Zapatillas</h2>
