--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <p class="logo">NIKE</p>
             <ul>       
-                <li><a href="Calzado.html">Calzado</a><li>
+                <li><a href="Calzados.html">Calzado</a><li>
                 <li><a href="Niños.html">Niños</a><li>
                 <li><a href="mujeres.html">Mujeres</a><li>
                 <li><a href="Hombres.html">Hombres</a><li>  
@@ -24,13 +24,12 @@
         <header>
         <h1>BIENVENIDOS A NIKE</h1>
         <h2>Ropa deportiva</h2> 
-        <p>somos una empresa de ropa y zapatillas deportivas mas <br>reconocida 
+        <p class="letras">somos una empresa de ropa y zapatillas deportivas mas <br>reconocida 
             en el mundo 
-        
         </p>  
-        <button><a href="iniciarsecion.html">iniciar secion</a><img src="icons/bxs-right-arrow-alt.svg" alt=""></button>
+        <button><a href="iniciarsecion.html">iniciar sesion</a><img src="icons/bxs-right-arrow-alt.svg" alt=""></button>
         </header>
-        <img class="emp" src="imagenes/jio.png" alt="">
+        <img class="emp" src="imagenes/ty.png" alt="">
         <img clas="fondo-emp" src="imagenes/images.png"  alt="">
         
     </div>
