--- a/mujeres.html
+++ b/mujeres.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shorcut icon" href="imagenes/nike.png">
 </head>
 <body>
     <header class="header">
@@ -13,6 +14,7 @@
             <h1>Mujeres</h1>
             <nav class="navbar">
                 <ul>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="Calzados.html">Calzados</a></li>
                     <li><a href="Hombres.html">Hombres</a></li>
                     <li><a href="mujeres.html">Mujeres</a></li>
