--- a/Calzados.html
+++ b/Calzados.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tienda de nike </title>
     <link rel="stylesheet" href="stylescalzados.css">
+    <link rel="shorcut icon" href="imagenes/nike.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
@@ -14,6 +15,7 @@
     <nav>
         <p class="logo"></p>
         <ul>       
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="Calzados.html">Calzado</a><li>
             <li><a href="Niños.html">Niños</a><li>
             <li><a href="mujeres.html">Mujeres</a><li>
