--- a/niños.html
+++ b/niños.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="shorcut icon" href="imagenes/nike.png">
 </head>
 <body>
     <header class="header">
@@ -13,10 +14,10 @@
             <h1>Niños</h1>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">Zapatillas</a></li>
-                    <li><a href="#">Polos</a></li>
-                    <li><a href="#">Buzos</a></li>
-                    <li><a href="#">Cascos</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="mujeres.html">Mujeres</a></li>
+                    <li><a href="Hombres.html">Hombres</a></li>
+                    <li><a href="Calzados.html">Calzado</a></li>
                 </ul>
             </nav>
         </div>
