--- a/Hombres.html
+++ b/Hombres.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tienda de nike </title>
-    <link rel="stylesheet" href="styles1.css">
+    <link rel="stylesheet" href="styleshombre.css">
     <link rel="shorcut icon" href="imagenes/nike.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
